--- a/data/timelines-sexy-tree-view.in.ui
+++ b/data/timelines-sexy-tree-view.in.ui
@@ -2,25 +2,25 @@
 <interface>
   <requires lib="gtk+" version="2.16"/>
   <!-- interface-naming-policy toplevel-contextual -->
-  <object class="GtkLabel" id="update_viewer_menu_label">
+  <object class="GtkLabel" id="timelines_sexy_tree_view_menu_label">
     <property name="visible">True</property>
-    <property name="label" translatable="yes">update_viewer_menu_label</property>
+    <property name="label" translatable="yes">timelines_sexy_tree_view_menu_label</property>
     <property name="use_markup">True</property>
   </object>
-  <object class="GtkAdjustment" id="update_viewer_max_updates_adjustment">
+  <object class="GtkAdjustment" id="timelines_sexy_tree_view_max_updates_adjustment">
     <property name="value">20</property>
     <property name="lower">20</property>
     <property name="upper">100</property>
     <property name="step_increment">10</property>
     <property name="page_increment">10</property>
   </object>
-  <object class="GtkLabel" id="update_viewer_tab_label">
+  <object class="GtkLabel" id="timelines_sexy_tree_view_tab_label">
     <property name="visible">True</property>
-    <property name="label" translatable="yes">update_viewer_tab_label</property>
+    <property name="label" translatable="yes">timelines_sexy_tree_view_tab_label</property>
     <property name="use_markup">True</property>
     <property name="use_underline">True</property>
   </object>
-  <object class="GtkListStore" id="update_viewer_list_store">
+  <object class="GtkListStore" id="timelines_sexy_tree_view_list_store">
     <columns>
       <!-- column-name GUINT_TWEET_LIST_INDEX -->
       <column type="guint"/>
@@ -62,26 +62,26 @@
       <column type="gboolean"/>
     </columns>
   </object>
-  <object class="GtkAdjustment" id="update_viewer_progress_bar_adjustment">
+  <object class="GtkAdjustment" id="timelines_sexy_tree_view_progress_bar_adjustment">
     <property name="upper">100</property>
     <property name="step_increment">10</property>
     <property name="page_increment">10</property>
     <property name="page_size">10</property>
   </object>
-  <object class="GtkVBox" id="update_viewer_vbox">
+  <object class="GtkVBox" id="timelines_sexy_tree_view_vbox">
     <property name="visible">True</property>
     <property name="orientation">vertical</property>
     <child>
-      <object class="GtkHBox" id="update_viewer_hbox">
+      <object class="GtkHBox" id="timelines_sexy_tree_view_hbox">
         <property name="visible">True</property>
         <child>
-          <object class="GtkHandleBox" id="update_viewer_handlebox">
+          <object class="GtkHandleBox" id="timelines_sexy_tree_view_handlebox">
             <property name="visible">True</property>
             <child>
-              <object class="GtkToolbar" id="update_viewer_toolbar">
+              <object class="GtkToolbar" id="timelines_sexy_tree_view_toolbar">
                 <property name="visible">True</property>
                 <child>
-                  <object class="GtkToolButton" id="update_viewer_refresh_tool_button">
+                  <object class="GtkToolButton" id="timelines_sexy_tree_view_refresh_tool_button">
                     <property name="visible">True</property>
                     <property name="label" translatable="yes">_Refresh</property>
                     <property name="use_underline">True</property>
@@ -102,15 +102,15 @@
                   </packing>
                 </child>
                 <child>
-                  <object class="GtkToolItem" id="update_viewer_progress_bar_custom_tool_button">
+                  <object class="GtkToolItem" id="timelines_sexy_tree_view_progress_bar_custom_tool_button">
                     <property name="visible">True</property>
                     <property name="border_width">12</property>
                     <child>
-                      <object class="GtkProgressBar" id="update_viewer_progress_bar">
+                      <object class="GtkProgressBar" id="timelines_sexy_tree_view_progress_bar">
                         <property name="visible">True</property>
+                        <property name="activity_mode">True</property>
                         <property name="show_text">True</property>
-                        <property name="adjustment">update_viewer_progress_bar_adjustment</property>
-                        <property name="discrete_blocks">20</property>
+                        <property name="adjustment">timelines_sexy_tree_view_progress_bar_adjustment</property>
                       </object>
                     </child>
                   </object>
@@ -120,26 +120,26 @@
                   </packing>
                 </child>
                 <child>
-                  <object class="GtkToolItem" id="update_viewer_max_updates_custom_tool_button">
+                  <object class="GtkToolItem" id="timelines_sexy_tree_view_max_updates_custom_tool_button">
                     <property name="visible">True</property>
                     <child>
-                      <object class="GtkFrame" id="update_viewer_max_updates_frame">
+                      <object class="GtkFrame" id="timelines_sexy_tree_view_max_updates_frame">
                         <property name="visible">True</property>
                         <property name="label_xalign">0</property>
                         <property name="shadow_type">none</property>
                         <child>
-                          <object class="GtkAlignment" id="update_viewer_max_updates_alignment">
+                          <object class="GtkAlignment" id="timelines_sexy_tree_view_max_updates_alignment">
                             <property name="visible">True</property>
                             <property name="xalign">1</property>
                             <property name="xscale">0.25</property>
                             <child>
-                              <object class="GtkSpinButton" id="update_viewer_max_updates_spin_button">
+                              <object class="GtkSpinButton" id="timelines_sexy_tree_view_max_updates_spin_button">
                                 <property name="visible">True</property>
                                 <property name="can_focus">True</property>
                                 <property name="max_length">100</property>
                                 <property name="invisible_char">&#x25CF;</property>
                                 <property name="shadow_type">etched-out</property>
-                                <property name="adjustment">update_viewer_max_updates_adjustment</property>
+                                <property name="adjustment">timelines_sexy_tree_view_max_updates_adjustment</property>
                                 <property name="climb_rate">10</property>
                                 <property name="snap_to_ticks">True</property>
                                 <property name="numeric">True</property>
@@ -149,7 +149,7 @@
                           </object>
                         </child>
                         <child type="label">
-                          <object class="GtkLabel" id="update_viewer_max_updates_label">
+                          <object class="GtkLabel" id="timelines_sexy_tree_view_max_updates_label">
                             <property name="visible">True</property>
                             <property name="label" translatable="yes">&lt;b&gt;Ma_x updates:&lt;/b&gt;</property>
                             <property name="use_markup">True</property>
@@ -173,7 +173,7 @@
                   </packing>
                 </child>
                 <child>
-                  <object class="GtkToggleToolButton" id="update_viewer_stop_toggle_tool_button">
+                  <object class="GtkToggleToolButton" id="timelines_sexy_tree_view_stop_toggle_tool_button">
                     <property name="visible">True</property>
                     <property name="use_underline">True</property>
                   </object>
@@ -183,7 +183,7 @@
                   </packing>
                 </child>
                 <child>
-                  <object class="GtkToolButton" id="update_viewer_close_tool_button">
+                  <object class="GtkToolButton" id="timelines_sexy_tree_view_close_tool_button">
                     <property name="visible">True</property>
                     <property name="label" translatable="yes">_Close</property>
                     <property name="use_underline">True</property>
@@ -209,7 +209,7 @@
       </packing>
     </child>
     <child>
-      <object class="GtkHSeparator" id="update_viewer_hseparator">
+      <object class="GtkHSeparator" id="timelines_sexy_tree_view_hseparator">
         <property name="visible">True</property>
       </object>
       <packing>
@@ -219,18 +219,18 @@
       </packing>
     </child>
     <child>
-      <object class="GtkScrolledWindow" id="update_viewer_scrolled_window">
+      <object class="GtkScrolledWindow" id="timelines_sexy_tree_view_scrolled_window">
         <property name="visible">True</property>
         <property name="can_focus">True</property>
         <property name="hscrollbar_policy">automatic</property>
         <property name="vscrollbar_policy">automatic</property>
         <child>
-          <object class="GtkTreeView" id="update_viewer_sexy_tree_view">
+          <object class="GtkTreeView" id="timelines_sexy_tree_view_sexy_tree_view">
             <property name="visible">True</property>
             <property name="can_focus">True</property>
-            <property name="model">update_viewer_list_store</property>
+            <property name="model">timelines_sexy_tree_view_list_store</property>
             <property name="headers_clickable">False</property>
-            <property name="expander_column">update_viewer_string_update_tree_view_column</property>
+            <property name="expander_column">timelines_sexy_tree_view_string_update_tree_view_column</property>
             <property name="reorderable">True</property>
             <property name="rules_hint">True</property>
             <property name="search_column">1</property>
@@ -238,14 +238,14 @@
             <property name="enable_grid_lines">both</property>
             <property name="enable_tree_lines">True</property>
             <child>
-              <object class="GtkTreeViewColumn" id="update_viewer_pixbuf_avatar_tree_view_column">
+              <object class="GtkTreeViewColumn" id="timelines_sexy_tree_view_pixbuf_avatar_tree_view_column">
                 <property name="sizing">fixed</property>
                 <property name="fixed_width">58</property>
                 <property name="min_width">58</property>
                 <property name="max_width">58</property>
                 <property name="title">Avatar</property>
                 <child>
-                  <object class="GtkCellRendererPixbuf" id="update_viewer_pixbuf_avatar_cell_renderer_pixbuf">
+                  <object class="GtkCellRendererPixbuf" id="timelines_sexy_tree_view_pixbuf_avatar_cell_renderer_pixbuf">
                     <property name="xpad">5</property>
                     <property name="ypad">5</property>
                     <property name="yalign">0</property>
@@ -257,20 +257,19 @@
               </object>
             </child>
             <child>
-              <object class="GtkTreeViewColumn" id="update_viewer_string_update_tree_view_column">
+              <object class="GtkTreeViewColumn" id="timelines_sexy_tree_view_string_update_tree_view_column">
                 <property name="resizable">True</property>
                 <property name="sizing">fixed</property>
                 <property name="title">Update</property>
                 <property name="expand">True</property>
                 <property name="clickable">True</property>
                 <child>
-                  <object class="GtkCellRendererText" id="update_viewer_string_update_cell_renderer_text">
-                    <property name="xpad">5</property>
+                  <object class="GtkCellRendererText" id="timelines_sexy_tree_view_string_update_cell_renderer_text">
+                    <property name="width">1</property>
+                    <property name="height">1</property>
                     <property name="ypad">5</property>
                     <property name="yalign">0</property>
                     <property name="editable">True</property>
-                    <property name="rise">13</property>
-                    <property name="stretch">semi-condensed</property>
                     <property name="wrap_mode">word</property>
                     <property name="wrap_width">200</property>
                   </object>
@@ -281,13 +280,13 @@
               </object>
             </child>
             <child>
-              <object class="GtkTreeViewColumn" id="update_viewer_string_from_tree_view_column">
+              <object class="GtkTreeViewColumn" id="timelines_sexy_tree_view_string_from_tree_view_column">
                 <property name="resizable">True</property>
                 <property name="sizing">fixed</property>
                 <property name="fixed_width">95</property>
                 <property name="title">From:</property>
                 <child>
-                  <object class="GtkCellRendererText" id="update_viewer_string_from_cell_renderer_text">
+                  <object class="GtkCellRendererText" id="timelines_sexy_tree_view_string_from_cell_renderer_text">
                     <property name="xpad">5</property>
                     <property name="ypad">5</property>
                     <property name="yalign">0</property>
@@ -304,13 +303,13 @@
               </object>
             </child>
             <child>
-              <object class="GtkTreeViewColumn" id="update_viewer_string_rcpt_tree_view_column">
+              <object class="GtkTreeViewColumn" id="timelines_sexy_tree_view_string_rcpt_tree_view_column">
                 <property name="resizable">True</property>
                 <property name="sizing">fixed</property>
                 <property name="min_width">95</property>
                 <property name="title">To/RCPT:</property>
                 <child>
-                  <object class="GtkCellRendererText" id="update_viewer_string_rcpt_cell_renderer_text">
+                  <object class="GtkCellRendererText" id="timelines_sexy_tree_view_string_rcpt_cell_renderer_text">
                     <property name="xpad">5</property>
                     <property name="ypad">5</property>
                     <property name="yalign">0</property>
@@ -326,13 +325,13 @@
               </object>
             </child>
             <child>
-              <object class="GtkTreeViewColumn" id="update_viewer_created_ago_str_tree_view_column">
+              <object class="GtkTreeViewColumn" id="timelines_sexy_tree_view_created_ago_str_tree_view_column">
                 <property name="resizable">True</property>
                 <property name="sizing">fixed</property>
                 <property name="fixed_width">80</property>
                 <property name="title">Received</property>
                 <child>
-                  <object class="GtkCellRendererText" id="update_viewer_created_ago_str_cell_renderer_text">
+                  <object class="GtkCellRendererText" id="timelines_sexy_tree_view_created_ago_str_cell_renderer_text">
                     <property name="yalign">0</property>
                     <property name="alignment">right</property>
                     <property name="stretch">condensed</property>
