--- a/data/update-viewer.old.ui
+++ b/data/update-viewer.old.ui
@@ -2,9 +2,9 @@
 <interface>
   <!-- interface-requires gtk+ 2.12 -->
   <!-- interface-naming-policy project-wide -->
-  <object class="GtkWindow" id="control_panel">
+  <object class="GtkWindow" id="update_viewer">
     <child>
-      <object class="GtkHBox" id="control_panel_embed">
+      <object class="GtkHBox" id="update_viewer_embed">
         <property name="visible">True</property>
         <property name="spacing">1</property>
         <child>
@@ -49,8 +49,8 @@
                         <property name="can_focus">True</property>
                         <property name="receives_default">True</property>
                         <property name="image">best_friend_image</property>
-                        <accelerator key="asterisk" signal="activate" modifiers="GDK_MOD1_MASK"/>
                         <accelerator key="exclam" signal="activate" modifiers="GDK_MOD1_MASK"/>
+                        <accelerator key="asterisk" signal="activate" modifiers="GDK_MOD1_MASK"/>
                       </object>
                       <packing>
                         <property name="expand">False</property>
@@ -184,7 +184,7 @@
           </packing>
         </child>
         <child>
-          <object class="GtkVSeparator" id="control_panel_left_vseparator">
+          <object class="GtkVSeparator" id="update_viewer_left_vseparator">
             <property name="visible">True</property>
             <property name="orientation">vertical</property>
           </object>
@@ -228,11 +228,11 @@
               </packing>
             </child>
             <child>
-              <object class="GtkVBox" id="control_panel_update_composition_vbox">
+              <object class="GtkVBox" id="update_viewer_update_composition_vbox">
                 <property name="visible">True</property>
                 <property name="orientation">vertical</property>
                 <child>
-                  <object class="GtkHSeparator" id="control_panel_view_controls_hseparator">
+                  <object class="GtkHSeparator" id="update_viewer_view_controls_hseparator">
                     <property name="visible">True</property>
                   </object>
                   <packing>
@@ -241,13 +241,13 @@
                   </packing>
                 </child>
                 <child>
-                  <object class="GtkAspectFrame" id="control_panel_view_controls_aspect_frame">
+                  <object class="GtkAspectFrame" id="update_viewer_view_controls_aspect_frame">
                     <property name="visible">True</property>
                     <property name="label_xalign">0</property>
                     <property name="shadow_type">none</property>
                     <property name="xalign">1</property>
                     <child>
-                      <object class="GtkHBox" id="control_panel_view_controls_hbox">
+                      <object class="GtkHBox" id="update_viewer_view_controls_hbox">
                         <property name="visible">True</property>
                         <child>
                           <object class="GtkButton" id="reply_button">
@@ -390,7 +390,7 @@
                   </packing>
                 </child>
                 <child>
-                  <object class="GtkHBox" id="control_panel_update_composition_hbox">
+                  <object class="GtkHBox" id="update_viewer_update_composition_hbox">
                     <property name="visible">True</property>
                     <child>
                       <object class="GtkImage" id="get2gnow_mini_logo">
@@ -405,7 +405,7 @@
                       </packing>
                     </child>
                     <child>
-                      <object class="GtkComboBoxEntry" id="control_panel_sexy_entry_combo_box_entry">
+                      <object class="GtkComboBoxEntry" id="update_viewer_sexy_entry_combo_box_entry">
                         <property name="visible">True</property>
                         <property name="model">previous_updates_list_store</property>
                         <property name="add_tearoffs">True</property>
@@ -413,6 +413,7 @@
                         <child>
                           <object class="GtkCellRendererText" id="previous_update_cell_renderer_text">
                             <property name="xpad">5</property>
+                            <property name="xalign">0</property>
                           </object>
                           <attributes>
                             <attribute name="text">0</attribute>
@@ -428,8 +429,8 @@
                         <property name="visible">True</property>
                         <property name="can_focus">True</property>
                         <property name="receives_default">True</property>
-                        <accelerator key="s" signal="clicked" modifiers="GDK_SHIFT_MASK | GDK_MOD1_MASK"/>
                         <accelerator key="s" signal="clicked" modifiers="GDK_MOD1_MASK"/>
+                        <accelerator key="s" signal="clicked" modifiers="GDK_SHIFT_MASK | GDK_MOD1_MASK"/>
                         <child>
                           <object class="GtkImage" id="sexy_send_image">
                             <property name="visible">True</property>
@@ -448,8 +449,8 @@
                         <property name="visible">True</property>
                         <property name="can_focus">True</property>
                         <property name="receives_default">True</property>
-                        <accelerator key="d" signal="clicked" modifiers="GDK_SHIFT_MASK | GDK_CONTROL_MASK"/>
                         <accelerator key="d" signal="clicked" modifiers="GDK_MOD1_MASK"/>
+                        <accelerator key="d" signal="clicked" modifiers="GDK_SHIFT_MASK | GDK_CONTROL_MASK"/>
                         <child>
                           <object class="GtkImage" id="sexy_dm_image">
                             <property name="visible">True</property>
@@ -479,8 +480,8 @@
                         <property name="visible">True</property>
                         <property name="can_focus">True</property>
                         <property name="receives_default">True</property>
-                        <accelerator key="n" signal="clicked" modifiers="GDK_SHIFT_MASK | GDK_CONTROL_MASK"/>
                         <accelerator key="n" signal="clicked" modifiers="GDK_CONTROL_MASK"/>
+                        <accelerator key="n" signal="clicked" modifiers="GDK_SHIFT_MASK | GDK_CONTROL_MASK"/>
                         <child>
                           <object class="GtkImage" id="new_update_image">
                             <property name="visible">True</property>
@@ -495,7 +496,7 @@
                       </packing>
                     </child>
                     <child>
-                      <object class="GtkVSeparator" id="control_panel_update_composition_vseparator">
+                      <object class="GtkVSeparator" id="update_viewer_update_composition_vseparator">
                         <property name="visible">True</property>
                         <property name="orientation">vertical</property>
                       </object>
@@ -510,8 +511,8 @@
                         <property name="visible">True</property>
                         <property name="can_focus">True</property>
                         <property name="receives_default">True</property>
-                        <accelerator key="d" signal="clicked" modifiers="GDK_CONTROL_MASK"/>
                         <accelerator key="d" signal="clicked" modifiers="GDK_SHIFT_MASK | GDK_CONTROL_MASK"/>
+                        <accelerator key="d" signal="clicked" modifiers="GDK_CONTROL_MASK"/>
                         <child>
                           <object class="GtkImage" id="dm_form_active_image">
                             <property name="visible">True</property>
@@ -629,7 +630,7 @@
           </packing>
         </child>
         <child>
-          <object class="GtkVSeparator" id="control_panel_right_vseparator">
+          <object class="GtkVSeparator" id="update_viewer_right_vseparator">
             <property name="visible">True</property>
             <property name="orientation">vertical</property>
           </object>
@@ -662,12 +663,12 @@ _Controls</property>
               <object class="GtkHBox" id="status_control_hbox">
                 <property name="visible">True</property>
                 <child>
-                  <object class="GtkToggleButton" id="control_panel_compact_view_toggle_button">
+                  <object class="GtkToggleButton" id="update_viewer_compact_view_toggle_button">
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
                     <property name="receives_default">True</property>
                     <child>
-                      <object class="GtkImage" id="control_panel_compact_view_image">
+                      <object class="GtkImage" id="update_viewer_compact_view_image">
                         <property name="visible">True</property>
                         <property name="stock">gtk-leave-fullscreen</property>
                       </object>
@@ -680,11 +681,11 @@ _Controls</property>
                   </packing>
                 </child>
                 <child>
-                  <object class="GtkToggleButton" id="control_panel_embed_toggle_button">
+                  <object class="GtkToggleButton" id="update_viewer_embed_toggle_button">
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
                     <property name="receives_default">True</property>
-                    <property name="image">control_panel_embed_image</property>
+                    <property name="image">update_viewer_embed_image</property>
                   </object>
                   <packing>
                     <property name="expand">False</property>
@@ -742,15 +743,13 @@ _Controls</property>
       <column type="gpointer"/>
       <!-- column-name IN_REPLY_TO_STATUS_ID -->
       <column type="gdouble"/>
-      <!-- column-name GSTRING_NULL -->
-      <column type="gchararray"/>
     </columns>
   </object>
   <object class="GtkImage" id="best_friend_image">
     <property name="visible">True</property>
     <property name="stock">gnome-stock-about</property>
   </object>
-  <object class="GtkImage" id="control_panel_embed_image">
+  <object class="GtkImage" id="update_viewer_embed_image">
     <property name="visible">True</property>
     <property name="stock">gtk-goto-top</property>
   </object>
