--- a/data/preferences.ui
+++ b/data/preferences.ui
@@ -87,12 +87,38 @@
                         <property name="visible">True</property>
                         <property name="left_padding">12</property>
                         <child>
-                          <object class="GtkVBox" id="vbox2">
+                          <object class="GtkVBox" id="look_and_feel_preferences_view_vbox">
                             <property name="visible">True</property>
                             <property name="orientation">vertical</property>
                             <child>
+                              <object class="GtkCheckButton" id="compact_entire_view_check_button">
+                                <property name="label" translatable="yes">Use the most compact _UI possible.</property>
+                                <property name="visible">True</property>
+                                <property name="can_focus">True</property>
+                                <property name="receives_default">False</property>
+                                <property name="use_underline">True</property>
+                                <property name="draw_indicator">True</property>
+                              </object>
+                              <packing>
+                                <property name="position">0</property>
+                              </packing>
+                            </child>
+                            <child>
+                              <object class="GtkCheckButton" id="timelines_sexy_tree_view_concatenated_update_check_button">
+                                <property name="label" translatable="yes">Co_ncatenate update details into one column.</property>
+                                <property name="visible">True</property>
+                                <property name="can_focus">True</property>
+                                <property name="receives_default">False</property>
+                                <property name="use_underline">True</property>
+                                <property name="draw_indicator">True</property>
+                              </object>
+                              <packing>
+                                <property name="position">1</property>
+                              </packing>
+                            </child>
+                            <child>
                               <object class="GtkCheckButton" id="update_viewer_compact_view_toggle_button">
-                                <property name="label" translatable="yes">Enable: _compact update viewer:
+                                <property name="label" translatable="yes">Use: _compact update viewer:
   I.E. Only show buttons when they're clickable.</property>
                                 <property name="visible">True</property>
                                 <property name="can_focus">True</property>
@@ -103,12 +129,12 @@
                               <packing>
                                 <property name="expand">False</property>
                                 <property name="fill">False</property>
-                                <property name="position">0</property>
+                                <property name="position">4</property>
                               </packing>
                             </child>
                             <child>
                               <object class="GtkCheckButton" id="update_viewer_use_dialog_toggle_button">
-                                <property name="label" translatable="yes">Enable: _floating update viewer:
+                                <property name="label" translatable="yes">Use: _floating update viewer:
   I.E. Use a separate window to read &amp; write updates.</property>
                                 <property name="visible">True</property>
                                 <property name="can_focus">True</property>
@@ -119,7 +145,7 @@
                               <packing>
                                 <property name="expand">False</property>
                                 <property name="fill">False</property>
-                                <property name="position">1</property>
+                                <property name="position">6</property>
                               </packing>
                             </child>
                           </object>
