--- a/data/timelines-sexy-tree-view.in.ui
+++ b/data/timelines-sexy-tree-view.in.ui
@@ -34,6 +34,8 @@
       <column type="gchararray"/>
       <!-- column-name STRING_TEXT -->
       <column type="gchararray"/>
+      <!-- column-name STRING_DETAILED_UPDATE -->
+      <column type="gchararray"/>
       <!-- column-name STRING_UPDATE -->
       <column type="gchararray"/>
       <!-- column-name STRING_SEXY_UPDATE -->
@@ -251,7 +253,30 @@
                     <property name="yalign">0</property>
                   </object>
                   <attributes>
-                    <attribute name="pixbuf">12</attribute>
+                    <attribute name="pixbuf">13</attribute>
+                  </attributes>
+                </child>
+              </object>
+            </child>
+            <child>
+              <object class="GtkTreeViewColumn" id="timelines_sexy_tree_view_string_detailed_update_tree_view_column">
+                <property name="resizable">True</property>
+                <property name="sizing">fixed</property>
+                <property name="title">Detailed Update</property>
+                <property name="expand">True</property>
+                <property name="clickable">True</property>
+                <child>
+                  <object class="GtkCellRendererText" id="timelines_sexy_tree_view_string_detailed_update_cell_renderer_text">
+                    <property name="width">1</property>
+                    <property name="height">1</property>
+                    <property name="ypad">5</property>
+                    <property name="yalign">0</property>
+                    <property name="editable">True</property>
+                    <property name="wrap_mode">word</property>
+                    <property name="wrap_width">200</property>
+                  </object>
+                  <attributes>
+                    <attribute name="markup">8</attribute>
                   </attributes>
                 </child>
               </object>
@@ -274,7 +299,7 @@
                     <property name="wrap_width">200</property>
                   </object>
                   <attributes>
-                    <attribute name="markup">6</attribute>
+                    <attribute name="markup">7</attribute>
                   </attributes>
                 </child>
               </object>
@@ -297,7 +322,7 @@
                     <property name="wrap_width">85</property>
                   </object>
                   <attributes>
-                    <attribute name="markup">14</attribute>
+                    <attribute name="markup">15</attribute>
                   </attributes>
                 </child>
               </object>
@@ -319,7 +344,7 @@
                     <property name="wrap_width">85</property>
                   </object>
                   <attributes>
-                    <attribute name="markup">15</attribute>
+                    <attribute name="markup">16</attribute>
                   </attributes>
                 </child>
               </object>
@@ -340,7 +365,7 @@
                     <property name="wrap_width">70</property>
                   </object>
                   <attributes>
-                    <attribute name="text">8</attribute>
+                    <attribute name="text">9</attribute>
                   </attributes>
                 </child>
               </object>
